prevent menu gap when mobile browser toolbar hides

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,8 @@ body {
 }
 
 .menu-full-height {
-  height: 100vh;
-  height: 100dvh;
+  min-height: 100vh;
+  min-height: 100svh;
+  height: 115dvh;
   min-height: -webkit-fill-available;
 }
